--- a/ProyectoVentaProducto/pom.xml
+++ b/ProyectoVentaProducto/pom.xml
@@ -7,6 +7,7 @@ https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <packaging>pom</packaging>
     <modules>
         <module>Persistencia</module>
+        <module>negocio</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
