--- a/ProyectoVentaProducto/pom.xml
+++ b/ProyectoVentaProducto/pom.xml
@@ -8,6 +8,7 @@ https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modules>
         <module>Persistencia</module>
         <module>negocio</module>
+        <module>web</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
