--- a/ProyectoVentaProducto/web/pom.xml
+++ b/ProyectoVentaProducto/web/pom.xml
@@ -46,6 +46,11 @@
             <version>10.0.0</version>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <dependency>
             <groupId>co.edu.uniquindio</groupId>
             <artifactId>Persistencia</artifactId>
             <version>0.0.1-SNAPSHOT</version>
