--- a/ProyectoVentaProducto/negocio/src/main/resources/application.properties
+++ b/ProyectoVentaProducto/negocio/src/main/resources/application.properties
@@ -5,8 +5,19 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/unishop?serverTimezone=UTC
 #Usuario y contrase?a para tu base de datos descrita en la l?nea anterior
 spring.datasource.username=root
-spring.datasource.password=aguileracamilo03
+spring.datasource.password=root
 #[Opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
 spring.jpa.show-sql = true
 #[Opcional]Crea las tablas.
 spring.jpa.hibernate.ddl-auto=update
+server.port=8080
+spring.mail.host=nico-valencias@gmail.com
+spring.mail.port=587
+spring.mail.username=nico-valencias@gmail.com
+spring.mail.password=pazpnmnbzsjhadev
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
