--- a/ProyectoVentaProducto/pom.xml
+++ b/ProyectoVentaProducto/pom.xml
@@ -37,5 +37,9 @@ https://maven.apache.org/xsd/maven-4.0.0.xsd">
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 </project>
